# BlazyDj

./: AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  ROADMAP.md
apps/lazydj-desktop/: Cargo.toml
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs  realtime.rs
crates/bpm/src/: lib.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/commands/: Cargo.toml
crates/commands/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/controller/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/cue/: Cargo.toml
crates/cue/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/decoder/: Cargo.toml
crates/decoder/src/: lib.rs
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/key/: Cargo.toml
crates/key/src/: lib.rs
crates/mixer/: Cargo.toml
crates/mixer/src/: lib.rs
crates/output/: Cargo.toml
crates/output/src/: cpal_output.rs  lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/waveform/: Cargo.toml
crates/waveform-render/src/: lib.rs
crates/waveform/src/: lib.rs
docs/: DECISIONS.md  PLAN.md  REVIEWER.md  TECH_STACK.md
